--- a/BattleShip.vcxproj
+++ b/BattleShip.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="source\Define.cpp" />
     <ClCompile Include="source\Error.cpp" />
     <ClCompile Include="source\Fps.cpp" />
+    <ClCompile Include="source\Graphics.cpp" />
     <ClCompile Include="source\Keyboard.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\Pad.cpp" />
@@ -31,6 +32,7 @@
     <ClCompile Include="source\SampleScene1.cpp" />
     <ClCompile Include="source\SampleScene2.cpp" />
     <ClCompile Include="source\SceneManager.cpp" />
+    <ClCompile Include="source\Sound.cpp" />
     <ClCompile Include="source\SystemMain.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -40,6 +42,7 @@
     <ClInclude Include="source\EnumScene.h" />
     <ClInclude Include="source\Error.h" />
     <ClInclude Include="source\Fps.h" />
+    <ClInclude Include="source\Graphics.h" />
     <ClInclude Include="source\Keyboard.h" />
     <ClInclude Include="source\Macro.h" />
     <ClInclude Include="source\Pad.h" />
@@ -49,6 +52,7 @@
     <ClInclude Include="source\SceneChanger.h" />
     <ClInclude Include="source\SceneManager.h" />
     <ClInclude Include="source\Singleton.h" />
+    <ClInclude Include="source\Sound.h" />
     <ClInclude Include="source\SystemMain.h" />
     <ClInclude Include="source\Task.h" />
   </ItemGroup>
