--- a/BattleShip.vcxproj.filters
+++ b/BattleShip.vcxproj.filters
@@ -86,6 +86,12 @@
     <ClCompile Include="source\Error.cpp">
       <Filter>ソース ファイル\common\Error</Filter>
     </ClCompile>
+    <ClCompile Include="source\Sound.cpp">
+      <Filter>ソース ファイル\singleton\resource</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Graphics.cpp">
+      <Filter>ソース ファイル\singleton\resource</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\SystemMain.h">
@@ -138,6 +144,12 @@
     </ClInclude>
     <ClInclude Include="source\Macro.h">
       <Filter>ソース ファイル\common\Error</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Sound.h">
+      <Filter>ソース ファイル\singleton\resource</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Graphics.h">
+      <Filter>ソース ファイル\singleton\resource</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
