--- a/BattleShip.vcxproj
+++ b/BattleShip.vcxproj
@@ -24,12 +24,16 @@
     <ClCompile Include="source\BattleBoardScene.cpp" />
     <ClCompile Include="source\BitUtils.cpp" />
     <ClCompile Include="source\BoardObject.cpp" />
+    <ClCompile Include="source\Button.cpp" />
+    <ClCompile Include="source\ButtonDrawer.cpp" />
     <ClCompile Include="source\CalcUtils.cpp" />
+    <ClCompile Include="source\CampaignMenuScene.cpp" />
     <ClCompile Include="source\CQuadTree.cpp" />
     <ClCompile Include="source\CQuadTreeManager.cpp" />
     <ClCompile Include="source\Define.cpp" />
     <ClCompile Include="source\DummyScene.cpp" />
     <ClCompile Include="source\EachEffect.cpp" />
+    <ClCompile Include="source\EnemySelectScene.cpp" />
     <ClCompile Include="source\Error.cpp" />
     <ClCompile Include="source\Fps.cpp" />
     <ClCompile Include="source\GameEffect.cpp" />
@@ -37,6 +41,8 @@
     <ClCompile Include="source\Graphics.cpp" />
     <ClCompile Include="source\Keyboard.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\ModeSelectScene.cpp" />
+    <ClCompile Include="source\MotherBoardSelectScene.cpp" />
     <ClCompile Include="source\Mouse.cpp" />
     <ClCompile Include="source\Pad.cpp" />
     <ClCompile Include="source\Parameter.cpp" />
@@ -46,7 +52,10 @@
     <ClCompile Include="source\Sound.cpp" />
     <ClCompile Include="source\SystemMain.cpp" />
     <ClCompile Include="source\TextHandle.cpp" />
+    <ClCompile Include="source\TItleScene.cpp" />
+    <ClCompile Include="source\TutorialModeSelectScene.cpp" />
     <ClCompile Include="source\Vector2.cpp" />
+    <ClCompile Include="source\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\AbstractScene.h" />
@@ -54,12 +63,17 @@
     <ClInclude Include="source\BattleBoardScene.h" />
     <ClInclude Include="source\BitUtils.h" />
     <ClInclude Include="source\BoardObject.h" />
+    <ClInclude Include="source\Button.h" />
+    <ClInclude Include="source\ButtonDrawer.h" />
     <ClInclude Include="source\CalcUtils.h" />
+    <ClInclude Include="source\CampaignMenuScene.h" />
     <ClInclude Include="source\CQuadTree.h" />
     <ClInclude Include="source\CQuadTreeManager.h" />
     <ClInclude Include="source\Define.h" />
     <ClInclude Include="source\DummyScene.h" />
     <ClInclude Include="source\EachEffect.h" />
+    <ClInclude Include="source\eButtonState.h" />
+    <ClInclude Include="source\EnemySelectScene.h" />
     <ClInclude Include="source\EnumScene.h" />
     <ClInclude Include="source\Error.h" />
     <ClInclude Include="source\Fps.h" />
@@ -68,6 +82,8 @@
     <ClInclude Include="source\Graphics.h" />
     <ClInclude Include="source\Keyboard.h" />
     <ClInclude Include="source\Macro.h" />
+    <ClInclude Include="source\ModeSelectScene.h" />
+    <ClInclude Include="source\MotherBoardSelectScene.h" />
     <ClInclude Include="source\Mouse.h" />
     <ClInclude Include="source\ObjectCallBackListener.h" />
     <ClInclude Include="source\Pad.h" />
@@ -81,7 +97,11 @@
     <ClInclude Include="source\SystemMain.h" />
     <ClInclude Include="source\Task.h" />
     <ClInclude Include="source\TextHandle.h" />
+    <ClInclude Include="source\TItleScene.h" />
+    <ClInclude Include="source\TutorialModeSelectScene.h" />
+    <ClInclude Include="source\UIInterface.h" />
     <ClInclude Include="source\Vector2.h" />
+    <ClInclude Include="source\Window.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
