--- a/BattleShip.vcxproj
+++ b/BattleShip.vcxproj
@@ -40,6 +40,7 @@
     <ClCompile Include="source\GameEffectUnit.cpp" />
     <ClCompile Include="source\Graphics.cpp" />
     <ClCompile Include="source\Keyboard.cpp" />
+    <ClCompile Include="source\LightningBackground.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\ModeSelectScene.cpp" />
     <ClCompile Include="source\MotherBoardSelectScene.cpp" />
@@ -81,6 +82,7 @@
     <ClInclude Include="source\GameEffectUnit.h" />
     <ClInclude Include="source\Graphics.h" />
     <ClInclude Include="source\Keyboard.h" />
+    <ClInclude Include="source\LightningBackground.h" />
     <ClInclude Include="source\Macro.h" />
     <ClInclude Include="source\ModeSelectScene.h" />
     <ClInclude Include="source\MotherBoardSelectScene.h" />
